--- a/OpenEdXMobile/res/layout/fragment_my_courses_list.xml
+++ b/OpenEdXMobile/res/layout/fragment_my_courses_list.xml
@@ -31,9 +31,9 @@
                     tools:listitem="@layout/row_course_list" />
 
                 <include
-                    android:id="@+id/empty_screen_layout"
-                    layout="@layout/empty_screen_layout"
-                    android:visibility="gone" />
+                    android:id="@+id/stateLayout"
+                    layout="@layout/layout_error_state"
+                    android:visibility="visible" />
 
             </FrameLayout>
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
