--- a/OpenEdXMobile/res/values/attrs.xml
+++ b/OpenEdXMobile/res/values/attrs.xml
@@ -6,6 +6,14 @@
         <attr name="popupSpinnerStyle" format="reference" />
     </declare-styleable>
 
+    <declare-styleable name="StateLayout">
+        <attr name="state" format="enum">
+            <enum name="NETWORK" value="0"/>
+            <enum name="EMPTY" value="1"/>
+            <enum name="LOAD_ERROR" value="2"/>
+        </attr>
+    </declare-styleable>
+
     <declare-styleable name="EdxDiscussionBody">
         <attr name="bodyTextAppearance" format="reference" />
     </declare-styleable>
