--- a/OpenEdXMobile/res/values/styles.xml
+++ b/OpenEdXMobile/res/values/styles.xml
@@ -382,7 +382,7 @@
         <item name="android:fontFamily">?attr/fontSemiBold</item>
     </style>
 
-    <style name="edX.Widget.PrimaryActionButton">
+    <style name="edX.Widget.BannerActionButton">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">end</item>
@@ -569,7 +569,7 @@
         <item name="android:textColor">@color/neutralWhiteT</item>
         <item name="android:textSize">@dimen/edx_large</item>
         <item name="background">@color/primaryLightColor</item>
-        <item name="android:gravity">left</item>
+        <item name="android:gravity">start</item>
         <item name="lineHeight">@dimen/widget_margin_x_double</item>
     </style>
 
@@ -582,15 +582,17 @@
         <item name="lineHeight">@dimen/widget_margin_double</item>
     </style>
 
-    <style name="EmptyStateButton" parent="edX.Widget.ActionBrandPillButton">
+    <style name="edX.Widget.PrimaryActionButton">
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_margin">@dimen/widget_margin_x_double</item>
-        <item name="android:text">@string/find_course_btn_text</item>
-        <item name="android:textSize">@dimen/edx_x_large</item>
-        <item name="backgroundTint">@color/secondaryBaseColor</item>
-        <item name="icon">@drawable/ic_search</item>
-        <item name="iconGravity">textStart</item>
-        <item name="iconPadding">@dimen/container_padding</item>
+        <item name="android:minHeight">@dimen/edx_button_height</item>
+        <item name="android:layout_marginTop">@dimen/widget_margin_x_double</item>
+        <item name="android:background">@drawable/edx_brand_button</item>
+        <item name="backgroundTint">@null</item>
+        <item name="android:textColor">@color/neutralWhite</item>
+        <item name="android:textSize">@dimen/edx_base</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">?attr/fontSemiBold</item>
         <item name="lineHeight">@dimen/widget_margin_x_double</item>
     </style>
 
