--- a/OpenEdXMobile/res/values/text_styles.xml
+++ b/OpenEdXMobile/res/values/text_styles.xml
@@ -262,16 +262,31 @@
         <item name="android:textSize">@dimen/edx_x_small</item>
     </style>
 
-    <style name="empty_state_text" parent="Widget.MaterialComponents.TextView">
+    <style name="error_state_text" parent="Widget.MaterialComponents.TextView">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginStart">@dimen/widget_margin_x_double</item>
         <item name="android:layout_marginTop">@dimen/widget_margin_x_double</item>
         <item name="android:layout_marginEnd">@dimen/widget_margin_x_double</item>
         <item name="android:fontFamily">?attr/fontSemiBold</item>
-        <item name="android:text">@string/find_course_text</item>
         <item name="android:textAlignment">center</item>
         <item name="android:textColor">@color/neutralBlackT</item>
         <item name="android:textSize">@dimen/edx_xxx_large</item>
         <item name="lineHeight">@dimen/edx_default_margin_double</item>
+    </style>
+
+    <style name="CourseDashboardHeadline">
+        <item name="android:textColor">@color/neutralBlackT</item>
+        <item name="android:textSize">@dimen/edx_large</item>
+        <item name="android:gravity">start</item>
+        <item name="android:fontFamily">?attr/fontSemiBold</item>
+        <item name="lineHeight">@dimen/widget_margin_x_double</item>
+    </style>
+
+    <style name="CourseDashboardDescription">
+        <item name="android:textColor">@color/neutralXXDark</item>
+        <item name="android:textSize">@dimen/edx_small</item>
+        <item name="android:gravity">start</item>
+        <item name="android:fontFamily">?attr/fontRegular</item>
+        <item name="lineHeight">@dimen/widget_margin_x_double</item>
     </style>
 </resources>
