--- a/OpenEdXMobile/res/values/strings_2.xml
+++ b/OpenEdXMobile/res/values/strings_2.xml
@@ -34,5 +34,7 @@
     <string name="label_go_to_my_course">Go to my courses</string>
     <!-- Message if error occurred on course dashboard -->
     <string name="message_an_error_occurred">An error occurred while loading your course</string>
+    <!-- Message if error occurred on my courses -->
+    <string name="message_an_error_occurred_courses">An error occurred while loading your courses</string>
 
 </resources>
