--- a/OpenEdXMobile/res/layout/row_discussion_comments_response.xml
+++ b/OpenEdXMobile/res/layout/row_discussion_comments_response.xml
@@ -23,7 +23,7 @@
             android:id="@+id/discussion_render_body"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:bodyStyle="@style/discussion_regular_text" />
+            app:bodyTextAppearance="@style/discussion_regular_text" />
 
         <TextView
             android:id="@+id/discussion_comment_count_report_text_view"
