fix: NPE on Posts in Discussion tab (#1742)
fix: NPE on Posts in the Discussion tab

- The AttributeSet of the EdxDiscussionBody was not applicable for the
  internal views and was causing a NullPointerException (NPE) on some
  devices.
- The addView functions simply add another view in the root FrameLayout
  which was casing overlapping issue when items were recycled in Recycler
  View.

Fixes: LEARNER-9224

--- a/OpenEdXMobile/res/layout/fragment_add_response_or_comment.xml
+++ b/OpenEdXMobile/res/layout/fragment_add_response_or_comment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <ScrollView
@@ -37,7 +38,9 @@
 
                 <org.edx.mobile.view.custom.EdxDiscussionBody
                     android:id="@+id/discussion_render_body"
-                    style="@style/discussion_regular_text" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:bodyTextAppearance="@style/discussion_regular_text" />
 
             </LinearLayout>
 
