--- a/OpenEdXMobile/res/values/attrs.xml
+++ b/OpenEdXMobile/res/values/attrs.xml
@@ -23,6 +23,10 @@
         <attr name="contourSize" format="dimension"/>
     </declare-styleable>
 
+    <declare-styleable name="EdxDiscussionBody">
+        <attr name="bodyTextAppearance" format="reference" />
+    </declare-styleable>
+
     <!--  Font attributes for the app  -->
     <attr name="fontItalic" format="reference" />
     <attr name="fontRegular" format="reference" />
