--- a/OpenEdXMobile/res/values-ar/errors.xml
+++ b/OpenEdXMobile/res/values-ar/errors.xml
@@ -51,7 +51,7 @@
   <string name="error_account_not_linked_desc_microsoft_2">لم يتم ربط حساب Microsoft هذا بأي حساب على {platform_name}. يرجى التسجيل.</string>
   <!--New version available-->
   <!--Snackbar notification shown when the current version of the app is unsupported-->
-  <string name="app_version_unsupported">النسخة التي لديك من التطبيق لم تعُد مدعومة.</string>
+  <string name="app_version_unsupported">النسخة التي لديك من التطبيق لم تعُد مدعومة</string>
   <!--Snackbar notification shown when the current version of the app is deprecated-->
   <!--Snackbar notification shown when the current version of the app is outdated-->
   <string name="app_version_outdated">نسخة جديدة من التطبيق متوفرة حالياً.</string>
