--- a/OpenEdXMobile/res/values-fr/errors.xml
+++ b/OpenEdXMobile/res/values-fr/errors.xml
@@ -51,7 +51,7 @@
   <string name="error_account_not_linked_desc_microsoft_2">Ce compte Microsoft n\'est lié à aucun compte {platform_name}. Veuillez vous inscrire.</string>
   <!--New version available-->
   <!--Snackbar notification shown when the current version of the app is unsupported-->
-  <string name="app_version_unsupported">Votre version n\'est plus prise en charge.</string>
+  <string name="app_version_unsupported">Votre version n\'est plus prise en charge</string>
   <!--Snackbar notification shown when the current version of the app is deprecated-->
   <!--Snackbar notification shown when the current version of the app is outdated-->
   <string name="app_version_outdated">Une nouvelle version est disponible.</string>
