--- a/OpenEdXMobile/res/values-ja/errors.xml
+++ b/OpenEdXMobile/res/values-ja/errors.xml
@@ -51,7 +51,7 @@
   <string name="error_account_not_linked_desc_microsoft_2">Microsoftアカウントが{platform_name}上のアカウントと連携登録されていません。登録を行ってください。</string>
   <!--New version available-->
   <!--Snackbar notification shown when the current version of the app is unsupported-->
-  <string name="app_version_unsupported">あなたが使っている本アプリのバージョンはサポートが終了しています。</string>
+  <string name="app_version_unsupported">あなたが使っている本アプリのバージョンはサポートが終了しています</string>
   <!--Snackbar notification shown when the current version of the app is deprecated-->
   <!--Snackbar notification shown when the current version of the app is outdated-->
   <string name="app_version_outdated">本アプリには新バージョンがあります。</string>
