--- a/OpenEdXMobile/res/layout/fragment_my_courses_list.xml
+++ b/OpenEdXMobile/res/layout/fragment_my_courses_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <FrameLayout
@@ -17,23 +18,23 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <ListView
+                <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/my_course_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:clipToPadding="false"
-                    android:divider="@android:color/transparent"
-                    android:dividerHeight="@dimen/widget_margin_half"
-                    android:drawSelectorOnTop="false"
-                    android:listSelector="@android:color/transparent"
                     android:paddingTop="@dimen/widget_margin_half"
                     android:paddingBottom="@dimen/widget_margin_half"
-                    tools:listitem="@layout/row_course_list" />
+                    android:visibility="gone"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:itemCount="2"
+                    tools:listitem="@layout/row_course_list"
+                    tools:visibility="visible" />
 
                 <include
                     android:id="@+id/stateLayout"
                     layout="@layout/layout_error_state"
-                    android:visibility="visible" />
+                    android:visibility="visible"
+                    tools:visibility="gone" />
 
             </FrameLayout>
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
@@ -42,7 +43,9 @@
             android:id="@+id/loading_indicator"
             layout="@layout/loading_indicator" />
 
-        <include layout="@layout/content_error" />
+        <include
+            layout="@layout/content_error"
+            tools:visibility="gone" />
 
     </FrameLayout>
 </layout>
