--- a/OpenEdXMobile/res/values/attrs.xml
+++ b/OpenEdXMobile/res/values/attrs.xml
@@ -11,6 +11,7 @@
             <enum name="NETWORK" value="0"/>
             <enum name="EMPTY" value="1"/>
             <enum name="LOAD_ERROR" value="2"/>
+            <enum name="UPDATE_APP" value="3"/>
         </attr>
     </declare-styleable>
 
