--- a/OpenEdXMobile/res/layout/layout_secondary_button.xml
+++ b/OpenEdXMobile/res/layout/layout_secondary_button.xml
@@ -2,7 +2,7 @@
 <com.google.android.material.button.MaterialButton xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/secondary_button"
-    style="@style/edX.Widget.SecondaryBorderedButton"
+    style="@style/edX.Widget.SecondaryActionButton"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/container_padding"
