feat: Add Access Error screen for case "Course not started"
Fixes: LEARNER-9221

--- a/OpenEdXMobile/res/values/attrs.xml
+++ b/OpenEdXMobile/res/values/attrs.xml
@@ -19,6 +19,7 @@
         <attr name="state" format="enum">
             <enum name="audit_access_expired" value="0" />
             <enum name="is_upgradeable" value="1" />
+            <enum name="not_started" value="2" />
         </attr>
     </declare-styleable>
 
