--- a/OpenEdXMobile/res/layout/activity_course_tabs_dashboard.xml
+++ b/OpenEdXMobile/res/layout/activity_course_tabs_dashboard.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragment_container_view"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/flying_message"
-        style="@style/flying_message"
-        android:visibility="gone" />
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragment_container_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
-</FrameLayout>
+        <TextView
+            android:id="@+id/flying_message"
+            style="@style/flying_message"
+            android:visibility="gone" />
+
+    </FrameLayout>
+</layout>
