--- a/OpenEdXMobile/res/layout/tab_item.xml
+++ b/OpenEdXMobile/res/layout/tab_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -17,13 +16,6 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:textAlignment="center"
-        android:textColor="@color/tab_selector"
-        android:textSize="@dimen/edx_x_small"
-        app:lineHeight="@dimen/edx_default_margin"
+        style="@style/TabItem"
         tools:text="Title" />
 </LinearLayout>
