--- a/OpenEdXMobile/res/values/strings_2.xml
+++ b/OpenEdXMobile/res/values/strings_2.xml
@@ -37,4 +37,18 @@
     <string name="message_an_error_occurred_courses">An error occurred while loading your courses</string>
     <!-- Message for course has not started yet -->
     <string name="message_course_not_started">Come back %s to see all your course content here.</string>
+
+    <!-- Labels for Course Access Dates -->
+    <!-- Label for date when course starts -->
+    <string name="label_starting">Starts {date}</string>
+    <!-- Label for course that has ended -->
+    <string name="label_ended">Ended on {date}</string>
+    <!-- Label for date when course is ending -->
+    <string name="label_ending">Ends {date}</string>
+    <!-- Label for date when course is expiring on a specific date like on December 5 or in a specific time frame like in 2 days -->
+    <string name="label_expires">Access expires {date}</string>
+    <!-- Label for date when course expired a specific time ago like 2 days ago -->
+    <string name="label_expired">Access expired {date}</string>
+    <!-- Label for date when course expired on a specific date like on November 5 -->
+    <string name="label_expired_on">Expired on {date}</string>
 </resources>
