refactor: Show certificate on "View certificate" button only
Fixes: LEARNER-9085

--- a/OpenEdXMobile/res/layout-land/layout_course_dashboard_certificate.xml
+++ b/OpenEdXMobile/res/layout-land/layout_course_dashboard_certificate.xml
@@ -41,6 +41,7 @@
             android:layout_weight="1" />
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/view_certificate"
             style="@style/edX.Widget.PrimaryActionButton"
             android:text="@string/course_details_view_cert_button" />
 
