--- a/OpenEdXMobile/res/values/strings_2.xml
+++ b/OpenEdXMobile/res/values/strings_2.xml
@@ -54,4 +54,7 @@
     <string name="label_access_expired">Access expired {date}</string>
     <!-- Label for date when course expired on a specific date like on November 5 -->
     <string name="label_expired_on">Expired on {date}</string>
+
+    <!-- Button that opens a full view of an earned certificate -->
+    <string name="label_certificate_view_button">View certificate</string>
 </resources>
